Include add button and add text to item array.

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -29,7 +29,14 @@
                             <outlet property="delegate" destination="T83-wD-61Z" id="wLe-ki-WFv"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDoey" id="pzI-T0-VUk"/>
+                    <navigationItem key="navigationItem" title="ToDoey" id="pzI-T0-VUk">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="5NI-cj-TdQ">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="T83-wD-61Z" id="Vug-HM-T28"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SJy-q7-XhG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
